--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /XiaoYiSharp_ConsoleApp/obj
 /XiaoYiSharp_MauiBlazorApp/bin
 /XiaoYiSharp_MauiBlazorApp/obj
+/XiaoYiSharp_ConsoleApp/bin/Debug/net8.0
+/XiaoYiSharp_ConsoleApp/bin/Debug/net8.0
