--- a/XiaoYiSharp_MauiBlazorApp/Platforms/Android/AndroidManifest.xml
+++ b/XiaoYiSharp_MauiBlazorApp/Platforms/Android/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.nbeenet.xiaoyiApp" android:versionCode="4" android:versionName="v1.0.4">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:label="xiaoyiApp">
 		<!-- 这里可以添加 Activity、Service 等组件声明 -->
+    <service
+    android:name="com.nbeenet.xiaoyiApp.MyForegroundService"
+    android:enabled="true"
+    android:exported="false"
+    android:foregroundServiceType="dataSync" />
 	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -10,4 +15,6 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<!-- 新增允许安装未知来源应用的权限，Android 8.0 及以上需要 -->
 	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
 </manifest>
